SERVER-54460 Ensure that opCtx that waits on PrimaryOnlyService completion promise gets killed on stepdown