src/mongo/db/commands/tenant_migration_recipient_cmds.cpp
@@ -190,6 +190,7 @@ public:
 
             const auto& cmd = request();
 
+            opCtx->setAlwaysInterruptAtStepDownOrUp();
             auto recipientService =
                 repl::PrimaryOnlyServiceRegistry::get(opCtx->getServiceContext())
                     ->lookupServiceByName(repl::TenantMigrationRecipientService::
