src/mongo/db/s/config/configsvr_reshard_collection_cmd.cpp
@@ -141,6 +141,7 @@ public:
             coordinatorDoc.setPresetReshardedChunks(request().get_presetReshardedChunks());
             coordinatorDoc.setNumInitialChunks(request().getNumInitialChunks());
 
+            opCtx->setAlwaysInterruptAtStepDownOrUp();
             auto registry = repl::PrimaryOnlyServiceRegistry::get(opCtx->getServiceContext());
             auto service =
                 registry->lookupServiceByName(ReshardingCoordinatorService::kServiceName);
